src/test/deca/context/invalid/created/addidtion-imcopatible.daca
//addidtion-imcopatible.daca:3:10: Les deux types Boolean et String ne sont pas compatibles
{
    "5555"+true;
}